Fix alignment and sizing of header anchor tags
- Switch to `inherit` for font-size to allow the achor to change as the
  font-size of the anchor changes
- Switch to relative spacing so that the position change also adjusts
  with header text size.
- Remove margin rule that appeared to be causing issues aligning the
  header properly.

--- a/srht/scss/base.scss
+++ b/srht/scss/base.scss
@@ -310,8 +310,8 @@ code {
       transition: opacity 0.15s linear;
       opacity: 0;
       position: absolute;
-      font-size: 1.2rem;
-      left: -1rem;
+      font-size: inherit;
+      left: -.7em;
     }
 
     @media(prefers-reduced-motion) {
@@ -322,10 +322,6 @@ code {
     
     &:hover > a:first-child {
       opacity: 1;
-    }
-
-    * {
-      margin: 0 .5rem;
     }
 
     img {
